--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -46,7 +46,7 @@
     position: relative;
     overflow: hidden;
     display: inline-block;
-    background: #191a1c;
+    background: #151519;
     margin: 0 !important;
     display: flex;
     align-items: center;
